--- a/BAPSPresenterNG/Channel.xaml
+++ b/BAPSPresenterNG/Channel.xaml
@@ -5,13 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:BAPSPresenterNG"
+             xmlns:conv="clr-namespace:BAPSPresenterNG.Converters"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Width="360">
     <UserControl.Resources>
-        <local:ChannelIDConverter x:Key="ChannelIDConverter" />
-        <local:MsecToPositionStringConverter x:Key="MsecToPositionStringConverter" />
-        <local:EntryTypeToIconConverter x:Key="EntryTypeToIconConverter" />
+        <conv:ChannelIDConverter x:Key="ChannelIDConverter" />
+        <conv:MsecToPositionStringConverter x:Key="MsecToPositionStringConverter" />
+        <conv:EntryTypeToIconConverter x:Key="EntryTypeToIconConverter" />
         <GridLength x:Key="ChannelBarHeightGrid">32<!-- px --></GridLength>
         <sys:Double x:Key="ChannelBarHeight">32<!-- px --></sys:Double>
         <Thickness x:Key="ChannelBarMargin">6px</Thickness>
