--- a/BAPSPresenterNG/Controls/Directory.xaml
+++ b/BAPSPresenterNG/Controls/Directory.xaml
@@ -1,27 +1,24 @@
-﻿<UserControl x:Class="BAPSPresenterNG.Directory"
+﻿<UserControl x:Class="BAPSPresenterNG.Controls.Directory"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:BAPSPresenterNG"
+             xmlns:controls="clr-namespace:BAPSPresenterNG.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="240" d:DesignWidth="300" MaxHeight="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Name="nameRow" Height="Auto" />
-            <RowDefinition Name="fileListRow"/>
+            <RowDefinition Name="NameRow" Height="Auto" />
+            <RowDefinition Name="FileListRow"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <local:Header Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+        <controls:Header Grid.Row="0" Grid.Column="0"
                       Icon="FolderOpen"
                       Text="{Binding Name, FallbackValue='Unknown Directory'}"
-                      x:Name="directoryHeader">
+                      x:Name="DirectoryHeader">
             <Button Width="32px">
             </Button>
-        </local:Header>
-        <ListBox Grid.Row="1" Grid.Column="0" Name="fileList"
+        </controls:Header>
+        <ListBox Grid.Row="1" Grid.Column="0" Name="FileList"
                  ItemsSource="{Binding Files}"
                  >
         </ListBox>
