--- a/BAPSPresenterNG/Themes/Generic.xaml
+++ b/BAPSPresenterNG/Themes/Generic.xaml
@@ -1,41 +1,41 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:BAPSPresenterNG"
-    xmlns:fa="http://schemas.fontawesome.io/icons/">
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
+    xmlns:controls="clr-namespace:BAPSPresenterNG.Controls">
 
     <!-- Colours used throughout BAPS -->
     <SolidColorBrush
-        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=MainBgBrush}"
+        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=MainBgBrush}"
         Color="#FF002D5A" />
     <SolidColorBrush
-        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=MainFgBrush}"
+        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=MainFgBrush}"
         Color="White" />
     <SolidColorBrush
-        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=AccentBgBrush}"
+        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=AccentBgBrush}"
         Color="#FF004081" />
     <SolidColorBrush
-        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=AccentFgBrush}"
+        x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=AccentFgBrush}"
         Color="White" />
 
     <!-- Header control template -->
-    <Style TargetType="{x:Type local:Header}">
+    <Style TargetType="{x:Type controls:Header}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:Header}">
+                <ControlTemplate TargetType="{x:Type controls:Header}">
                     <DockPanel
                         Height="32px"
-                        Background="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=AccentBgBrush}}">
+                        Background="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=AccentBgBrush}}">
                         <fa:ImageAwesome
                             DockPanel.Dock="Left"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
                             Margin="4px"
-                            Foreground="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=AccentFgBrush}}"
+                            Foreground="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=AccentFgBrush}}"
                             Icon="{TemplateBinding Icon}" />
                         <ContentControl DockPanel.Dock="Right" Content="{TemplateBinding Content}" />
                         <Label
-                            Foreground="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type local:Header}, ResourceId=AccentFgBrush}}"
+                            Foreground="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type controls:Header}, ResourceId=AccentFgBrush}}"
                             FontSize="18px"
                             FontWeight="Bold"
                             Padding="4px"
